Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27367

[Regression] Drag and drop with empty mimeData->text() occasionally.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.0.0 Beta 1
    • GUI: Drag and Drop
    • None
    • Ubuntu 12.04, xcb
    • 5ba061a66e6aba4929cc77823a35e4714515ba7f

    Description

      1) Use the sample application from QTBUG-27366
      2) Create 2 instances of application.
      3) Drag text from instance A to instance B, repeat step 3 multiple times.

      Observe that occasionally text in application B changes to "# yo" (expected is "#Drag/drop" widget yo") what is a result of mimeData->text() being empty.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            paeglis Gatis Paeglis
            paeglis Gatis Paeglis
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes